package edu.harvard.iq.datatags.model.values;

import edu.harvard.iq.datatags.model.types.ToDoType;

/**
 * A placeholder value, to be filled in later in the
 * development of the ChartSet. Still, needs to be represented
 * in this system for completeness. TODO types don't have real values
 * anyway, since then they would not have been on the TODO list.
 * 
 * @author michael
 */
public class ToDoValue extends TagValue<ToDoType> {

	public ToDoValue(String name, ToDoType type, String info) {
		super(name, type, info);
	}

	@Override
	public <R> R accept(edu.harvard.iq.datatags.model.values.TagValue.Visitor<R> tv) {
		return tv.visitToDoValue(this);
	}
	
}
